--- a/src/styles/pokemonProfile.css
+++ b/src/styles/pokemonProfile.css
@@ -18,6 +18,9 @@
 	width: 50%;
 	background: linear-gradient(#dcd1bc, #b59685);
 	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .pokemon-profile-wrapper {
@@ -34,8 +37,8 @@
 
 .pokemon-img-container img {
 	object-fit: cover;
-	height: 100%;
-	width: 100%;
+	height: 70%;
+	width: 70%;
 }
 
 .pokemon-basic-info-mobile {
